--- a/Exercise/Exercise_10/index.html
+++ b/Exercise/Exercise_10/index.html
@@ -33,6 +33,10 @@
             height: 200px;
         }
         /* 請在此加入更多 style */
+        td {
+            background-image: url(https://i.imgur.com/ulrYqt9.jpg);
+            
+        }
     </style>
 </head>
 
