--- a/Exercise/Exercise_10/index.html
+++ b/Exercise/Exercise_10/index.html
@@ -35,8 +35,14 @@
         /* 請在此加入更多 style */
         td {
             background-image: url(https://i.imgur.com/ulrYqt9.jpg);
+            z-index:-2;
         }
-        
+        tbody {
+            background-image: url(https://i.imgur.com/OSR7RNT.gif);
+            flex-direction: column;
+            align-items: flex-end;
+        }
+
     </style>
 </head>
 
