--- a/Exercise/Exercise_10/index.html
+++ b/Exercise/Exercise_10/index.html
@@ -42,6 +42,10 @@
             flex-direction: column;
             align-items: flex-end;
         }
+        tbody {
+            background-image: url(https://i.imgur.com/wivmnTul.png);
+            align-items: center;
+        }
 
     </style>
 </head>
