--- a/Exercise/Exercise_10/index.html
+++ b/Exercise/Exercise_10/index.html
@@ -46,7 +46,8 @@
         }
         tbody {
             background-image: url(https://i.imgur.com/wivmnTul.png);
-            align-items: center;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
     </style>
