--- a/Exercise/Exercise_10/index.html
+++ b/Exercise/Exercise_10/index.html
@@ -52,7 +52,8 @@
 
             background-repeat: repeat-x,
                                no-repeat,
-                               no-repeat;
+                               no-repeat,
+                               repeat;
                                
             background-size: 200px 200px,
                              200px 200px,
