--- a/Exercise/筆記＋練習/flex.html
+++ b/Exercise/筆記＋練習/flex.html
@@ -11,6 +11,7 @@
             flex-direction: column;
             min-height: 100vh;
             font-size: 3rem;
+            margin:0%
         }
         header {
             background-color: wheat;
@@ -42,8 +43,8 @@
 <body>
     <header>header</header>
     <div class="content">
-        <main>main</main>
         <aside>aside</aside>
+        <main>main</main>
     </div>
     <footer>footer</footer>
     
