--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -37,7 +37,10 @@
         }
 
         /*調整邊框與內容的距離，文字置中*/
-       
+       .th, .td {
+           padding: 5px;
+           text-align: center;
+       }
 
 
     </style>
