--- a/Exercise/Exercise_11/try.html
+++ b/Exercise/Exercise_11/try.html
@@ -5,30 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        nav {
-            display: flex;
-            background-color:peru;
-            width: 100vw;
-        }
-   
-        nav>.item2,
-        nav>.item1 {
-            flex:none;
-            margin:10px;
-            background-color: peru;
-        }
-
-        nav>.item2 {
-            justify-content: flex-end;
-        }
-    </style>
 </head>
+    <style>
+
+    </style>
+
 <body>
-    <nav>
-        <div class="item1">Myshop</div>
-        <div class="item2">商品</div>
-        <div class="item2">購物車</div>
-    </nav>
+    <aside>
+
+    </aside>
+    <main>
+        
+    </main>
+
 </body>
 </html>
