--- a/Exercise/Exercise_11/index.html
+++ b/Exercise/Exercise_11/index.html
@@ -48,15 +48,19 @@
         aside {
             display: flex;
             flex-grow: 1;
-            background-color: hotpink;
+            background-color: rgb(230, 175, 202);
             flex-direction: column;
             flex-direction: flex-end;
+            padding: 20px;
         }
-        
+        /*框限跟內容一樣,怎麼寫?*/
         aside>div {
             width: 100px;
             height: 50px;
             padding:10px;
+            border-collapse: collapse;
+            border:3px gray dotted;
+            
         }
 
         /*右邊的菜單*/
