--- a/Exercise/Exercise_12/index.html
+++ b/Exercise/Exercise_12/index.html
@@ -38,9 +38,9 @@
         }
         /*側邊欄*/
         aside {
-            background-color: rgb(248, 250, 250);
             grid-area: 3/1/4/2;
             display: grid;
+            grid-template-rows: repeat(auto-fit,62.5px);
             justify-content:end;
             margin: 15px;
 
@@ -62,7 +62,6 @@
         }
         /*右邊商品欄*/
         main {
-            background-color: rgb(176, 230, 223);
             grid-area: 3/2/4/3;
             display: grid;
             grid-template-columns: repeat(auto-fit,250px);
@@ -77,8 +76,23 @@
         .button {
             display: grid;
             grid-template-columns: 1fr 1fr;
+            justify-content: space-around;   /*??????為什麼沒有套到*/
+            margin-left: 20px;
             padding: 5px;
+            
 
+        }
+        #btn {
+            border:1px solid #888888;
+            background-color:#e9e3e3dc;
+            padding: 5px;
+            border-radius:4px;
+        }
+        .price {
+            font-size: 30px;
+            text-align: center;
+            line-height: 10px;
+            padding: 20px;
         }
         footer {
             background-color: rgb(148, 146, 146);
@@ -92,10 +106,6 @@
             background-color:rgb(39, 37, 36);
             grid-area: 5/1/6/5;
         }
-
-
-
-
     </style>
 </head>
 <body>
