--- a/Exercise/Exercise_12/slides.html
+++ b/Exercise/Exercise_12/slides.html
@@ -6,21 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>slides</title>
     <style>
+        main {
+            grid-template-rows: repeat(auto-fit,250px);
+        }
         .content {
+            height: 250px;
+            width: auto;
+            background-color: rgb(186, 213, 214);
+            margin-bottom: 20px;
+            display: flex;
             
         }
+
+        .text {
+            margin-left: 10px;
+            
+        }
+
     </style>
 </head>
 <body>
     <main>
         <div class="content">
-
+            <div class="pic">
+                <img src="https://kikmiao1995.github.io/kiki-web--demo/image/beigang.jpg" height="250px" width="auto" alt="beigang Temple">
+            </div>
+            <div class="article">
+                <div><h2 style="text-align: center;">北港朝天宮</h2></div>
+                <div class="text">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp北港朝天宮是台灣本島三百餘座媽祖廟中，歷史最悠久，香火最盛的廟宇，到朝天宮除了虔誠的朝拜之外，更是巧奪天工的藝術品，其內的龍柱、香爐、石獅、木雕，以及彩繪等，令人連連稱讚。此外，每年的農曆元月15日元宵節的花燈比賽，也是此地的重要慶典之一，不容錯過。</div>
+            </div>
         </div>
 
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
+        <div class="content">
+            <div class="pic">
+                <img src="https://kikmiao1995.github.io/kiki-web--demo/image/Puppetshow.jpg" height="250px" width="auto" alt="beigang Temple">
+            </div>
+            <div class="article">
+                <div><h2 style="text-align: center;">虎尾布袋戲館</h2></div>
+                <div class="text">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp位於雲林虎尾鎮的「雲林布袋戲館」原本為虎尾郡役所，於昭和六年就已建造，於民國８６年列為雲林縣歷史建築，重新規劃為「雲林布袋戲館」，凸顯有布袋戲故鄉之稱的虎尾鎮地方特色。</div>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="pic">
+                <img src="https://kikmiao1995.github.io/kiki-web--demo/image/Puppetshow.jpg" height="250px" width="auto" alt="beigang Temple">
+            </div>
+            <div class="article">
+                <div><h2 style="text-align: center;">虎尾布袋戲館</h2></div>
+                <div class="text">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp位於雲林虎尾鎮的「雲林布袋戲館」原本為虎尾郡役所，於昭和六年就已建造，於民國８６年列為雲林縣歷史建築，重新規劃為「雲林布袋戲館」，凸顯有布袋戲故鄉之稱的虎尾鎮地方特色。</div>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="pic">
+                <img src="https://kikmiao1995.github.io/kiki-web--demo/image/Puppetshow.jpg" height="250px" width="auto" alt="beigang Temple">
+            </div>
+            <div class="article">
+                <div><h2 style="text-align: center;">虎尾布袋戲館</h2></div>
+                <div class="text">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp位於雲林虎尾鎮的「雲林布袋戲館」原本為虎尾郡役所，於昭和六年就已建造，於民國８６年列為雲林縣歷史建築，重新規劃為「雲林布袋戲館」，凸顯有布袋戲故鄉之稱的虎尾鎮地方特色。</div>
+            </div>
+        </div>
     </main>
 
 
