--- a/Exercise/Exercise_12/slides.html
+++ b/Exercise/Exercise_12/slides.html
@@ -66,6 +66,17 @@
                 <div class="text">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp位於雲林虎尾鎮的「雲林布袋戲館」原本為虎尾郡役所，於昭和六年就已建造，於民國８６年列為雲林縣歷史建築，重新規劃為「雲林布袋戲館」，凸顯有布袋戲故鄉之稱的虎尾鎮地方特色。</div>
             </div>
         </div>
+        <!--TWpapago我的連結-->
+        <div class="t">
+            <a href="https://fneg-10102110.github.io/TWpapago/kiki/yunlin.html">
+                <img src="https://kikmiao1995.github.io/kiki-web--demo/image/header.jpg" width="300" height="300">
+            </a>
+                <h1 style="font-size: 2rem; color: #b8860b;">台灣的大糧倉<h1>
+                    <p style="font-size: 1rem;"><i class="fas fa-star"></i>你不知道的雲林</p>
+                    <p style="font-size: 1rem;"><i class="fas fa-star"></i>工藝與文化古蹟</p>
+                    <p style="font-size: 1rem;"><i class="fas fa-star"></i>在地人才知道的平價小吃</p>
+        </div>
+        
     </main>
 
 
