--- a/Exercise/Exercise_03/ex3-2.html
+++ b/Exercise/Exercise_03/ex3-2.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ex3-2</title>
 </head>
 <strong>exercise3-2</strong>
 <body>
 
-    <p><mark>LINK</mark></p>
+    <p><mark>LINK 2</mark></p>
     <a href="file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/exercise/exercise_03/ex3-1.html">exercise3-1</a><br>
     exercise3-2<br>
-    <a href="file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/exercise/exercise_03/ex3-3.html ">exercise3-3</a>
+    <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_03/ex3-3.html">exercise3-3</a><br>
 
     <!-- ex33  file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/exercise/exercise_03/ex3-3.html 
          ex32  file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/exercise/exercise_03/ex3-2.html
