--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -7,10 +7,13 @@
     <title>Exercise_09</title>
     <style>
         
-        table {
-            border: 2px solid black;
+        table,th,td {
+            border: 1px solid rgb(199, 194, 194);
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 16px;
+            border-collapse: collapse;
+            padding: 5px;
+            text-align: center;
             border-collapse: collapse;
         }
         /*先塗背景*/
@@ -26,8 +29,8 @@
         .green {
             background-color: green;
         }
-        .light {
-            background-color:#32e72c;
+        .light_green {
+            background-color:#6bc935;
         }
         .rose_red {
             background-color: rgb(252, 71, 161);
@@ -35,13 +38,18 @@
         .pink {
             background-color: pink;
         }
-
-        /*調整邊框與內容的距離，文字置中*/
-       .th, .td {
-           padding: 5px;
-           text-align: center;
-       }
-
+        /*四邊都是黑色框*/
+        table tr:nth-child(2) th:nth-child(1),
+        table tr:nth-child(2) th:nth-child(2) {
+            border: black 2px solid;
+        }
+        /*上下左是黑色框*/
+        table tr:nth-child(1) td:nth-child(1),
+        table tr:nth-child(1) td:nth-child(4)
+         {
+            background-color:black 2px solid;
+        }
+       
 
     </style>
 </head>
@@ -53,8 +61,8 @@
                 <th colspan="6">資產負債表</td>
             </tr>
             <tr class="yellow">
-                <th colspan="3">資產</th>
-                <th colspan="3">負債及股東權益</th>
+                <th colspan="3" >資產</th>
+                <th colspan="3" >負債及股東權益</th>
             </tr>
         </thead>
             <tr>
@@ -88,13 +96,13 @@
                 <td class="green" rowspan="4">非流動資產</td>
                 <td rowspan="4">固定資產</td>
                 <td></td>
-                <td class="pink">負債合計</td>
+                <td class="pink" >負債合計</td>
                 <td></td>
                 <td>1,982,340</td>
             </tr>
             <tr>
                 <td></td>
-                <td class="light_green" rowspan="2">股東權益</td>
+                <td class="light_green" rowspan="2" >股東權益</td>
                 <td>股本</td>
                 <td>1,102,186</td>
             </tr>
