--- a/Exercise/Exercise_05/index.html
+++ b/Exercise/Exercise_05/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise_05</title>
-
-
+    
+    <style>
+        body {
+            grid-template-columns: repeat(3,1fr);
+            grid-template-rows: 40px 30px 1fr 30px;
+        }
+        
+    </style>
 
 </head>
 
@@ -16,6 +22,7 @@
 須使用「語意化標籤」
 使用 style 屬性美化頁面
  -->
+
 
 
 <body>
