--- a/Exercise/Exercise_06/index.html
+++ b/Exercise/Exercise_06/index.html
@@ -8,6 +8,8 @@
     <title>Exercise_06</title>
     <style>
         body {
+            width: 100vw;
+            height: 100vh;
             display: grid;
             grid-template-rows: 55px 300px 1fr 300px;
             grid-template-columns: repeat(4, 1fr);
