--- a/Lab/index.html
+++ b/Lab/index.html
@@ -51,9 +51,14 @@
             <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_06.html">Lab_06.html</a></td>
           </tr>
           <tr>
-            <td>Lab 07 - 以Bootstrap重新排版</td>
+            <td>Lab 07 - 加入Bootstrap重新排版</td>
             <td>課表與Bootstrap的火花</td>
             <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_07.html">Lab_07.html</a></td>
+          </tr>
+          <tr>
+            <td>Lab 08 - 加入ＦontAwesome</td>
+            <td>課表與ＦontAwesome的新火花</td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_08.html">Lab_08.html</a></td>
           </tr>
           
 
