--- a/Lab/Lab_07.html
+++ b/Lab/Lab_07.html
@@ -202,7 +202,7 @@
         <!-- Default dropup button -->
 <div class="btn-group dropup">
     <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Dropup
+     怪怪der
     </button>
     <div class="dropdown-menu">
       <!-- Dropdown menu links -->
@@ -212,13 +212,17 @@
   <!-- Split dropup button -->
   <div class="btn-group dropup">
     <button type="button" class="btn btn-secondary">
-      Split dropup
+      還是怪怪的
     </button>
     <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span class="sr-only">Toggle Dropdown</span>
     </button>
     <div class="dropdown-menu">
       <!-- Dropdown menu links -->
+      <div>當技術跟不上創意</div>
+      <div>ＱＱ</div>
+      <div>只能</div>
+      <div>醜醜der</div>
     </div>
   </div>
     </footer>
