--- a/Lab/Lab_08.html
+++ b/Lab/Lab_08.html
@@ -92,7 +92,10 @@
 </head>
 <body>
     <header>
-        課程資訊及選課系統
+         <div id="bomb"> 
+             <i class="fas fa-bomb fa-spin"></i>
+         </div>
+        <div class="text">課程資訊及選課系統</div>
     </header>
     <div class="classlink">
         <aside>
@@ -115,7 +118,7 @@
                     <caption>100學年 第一學期</caption>
                     <thead>
                         <tr>
-                            <th> </th>
+                            <th><i class="fas fa-calendar-alt"></i></th>
                             <th>星期一</th>
                             <th>星期二</th>
                             <th>星期三</th>
@@ -221,7 +224,7 @@
     </div>
   </div>
     </footer>
-    
+
     <!--Bootstrap Js part ：置於/body前-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
