--- a/Lab/Lab_05.html
+++ b/Lab/Lab_05.html
@@ -11,7 +11,7 @@
         }
 
         table{
-            width:70vw;
+            width:90vw;
             font-family:Arial, Helvetica, sans-serif;
             border-radius:10px;
         }
@@ -32,6 +32,7 @@
         }
         table, th, td {
             border:1px solid #889ec7;
+            padding: 5px;
         }
         /*折疊為單一編框 */
         table {
