--- a/Lab/Lab_05.html
+++ b/Lab/Lab_05.html
@@ -29,6 +29,7 @@
         }
         .divider{
             background-color:rgb(233, 204, 141);
+            color: transparent;
         }
         table, th, td {
             border:1px solid #889ec7;
@@ -114,7 +115,7 @@
         </tr>
         <tr>
           <td class="divider">16:10</td>
-          <td class="divider" colspan="5">下課囉！</td>
+          <td class="divider" colspan="5" >下課囉！</td>
         </tr>
 
           
