--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -44,11 +44,13 @@
             border: black 2px solid;
         }
         /*上下左是黑色框*/
-        table tr:nth-child(1) td:nth-child(1),
-        table tr:nth-child(1) td:nth-child(4)
-         {
-            background-color:black 2px solid;
+        table>tr:nth-child(1) td:nth-child(1),
+        table>tr:nth-child(1) td:nth-child(4){
+            border-top: black 2px solid;
+            border-left: black 2px solid;
+            border-top: black 2px solid;
         }
+
        
 
     </style>
