--- a/Exercise/Exercise_06/index.html
+++ b/Exercise/Exercise_06/index.html
@@ -19,16 +19,14 @@
             "left main right "
             "footer footer footer";
             gap: 2px;
-
         }
         nav { 
             grid-area: nav;
             background-color: rgb(197, 193, 193);
-           
         }
         header {
             grid-area: header;
-            background-color: darkgrey;
+            background-image: url();
         }
         .left {
             grid-area: left;
@@ -60,7 +58,9 @@
     <main>4</main>
     <div class="right">5</div>
 
-    <footer>4</footer>
+    <footer>
+
+    </footer>
 
 
 </body>
